--- a/Nona_Android/app/build.gradle
+++ b/Nona_Android/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.android.support:design:23.0.0'
+    compile 'com.android.volley:volley:1.0.0'
     compile files('libs/SmartDeviceLinkLibrary-4.0.0-Android.jar')
 }
